--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+    "swagger": "node swagger"
   }
 }
